--- a/src/output.css
+++ b/src/output.css
@@ -1204,6 +1204,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1325,6 +1329,10 @@ video {
 
 .pe-20 {
   padding-inline-end: 5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .text-center {
