--- a/src/output.css
+++ b/src/output.css
@@ -596,6 +596,10 @@ video {
   visibility: hidden;
 }
 
+.collapse {
+  visibility: collapse;
+}
+
 .fixed {
   position: fixed;
 }
@@ -714,6 +718,18 @@ video {
   margin-top: 97px;
 }
 
+.-mt-32 {
+  margin-top: -8rem;
+}
+
+.-mt-40 {
+  margin-top: -10rem;
+}
+
+.-mt-48 {
+  margin-top: -12rem;
+}
+
 .flex {
   display: flex;
 }
@@ -815,6 +831,14 @@ video {
   height: 10rem;
 }
 
+.h-44 {
+  height: 11rem;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -846,6 +870,18 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-3\/12 {
+  width: 25%;
 }
 
 .flex-1 {
@@ -985,6 +1021,22 @@ video {
 
 .gap-1 {
   gap: 0.25rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-96 {
+  gap: 24rem;
+}
+
+.gap-40 {
+  gap: 10rem;
+}
+
+.gap-52 {
+  gap: 13rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1139,6 +1191,11 @@ video {
   background-color: rgb(246 201 86 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1182,6 +1239,11 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .object-center {
@@ -1272,6 +1334,21 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-40 {
+  padding-left: 10rem;
+  padding-right: 10rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.py-96 {
+  padding-top: 24rem;
+  padding-bottom: 24rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1318,6 +1395,10 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.ps-40 {
+  padding-inline-start: 10rem;
 }
 
 .text-center {
@@ -1411,6 +1492,22 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.leading-\[\] {
+  line-height: ;
+}
+
+.leading-\[54px\] {
+  line-height: 54px;
+}
+
+.leading-\[540px\] {
+  line-height: 540px;
 }
 
 .text-Fuschia {
@@ -1528,6 +1625,16 @@ video {
   text-decoration-line: underline;
 }
 
+.hover\:brightness-50:hover {
+  --tw-brightness: brightness(.5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:brightness-75:hover {
+  --tw-brightness: brightness(.75);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .hover\:transition:hover {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1582,6 +1689,10 @@ video {
     visibility: hidden;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:hidden {
     display: none;
   }
@@ -1601,6 +1712,26 @@ video {
 
   .md\:w-56 {
     width: 14rem;
+  }
+
+  .md\:w-\[24\%\] {
+    width: 24%;
+  }
+
+  .md\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .md\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .md\:w-\[58\%\] {
+    width: 58%;
+  }
+
+  .md\:w-3\/12 {
+    width: 25%;
   }
 
   .md\:scale-100 {
@@ -1656,6 +1787,14 @@ video {
     margin-bottom: 0px;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:h-40 {
+    height: 10rem;
+  }
+
   .lg\:w-3\/12 {
     width: 25%;
   }
@@ -1666,6 +1805,14 @@ video {
 
   .lg\:w-\[24\%\] {
     width: 24%;
+  }
+
+  .lg\:w-11\/12 {
+    width: 91.666667%;
+  }
+
+  .lg\:w-3 {
+    width: 0.75rem;
   }
 
   .lg\:scale-100 {
@@ -1742,7 +1889,24 @@ video {
     flex-direction: row;
   }
 
+  .xl\:px-40 {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .xl\:text-\[56px\] {
     font-size: 56px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:px-40 {
+    padding-left: 10rem;
+    padding-right: 10rem;
   }
 }
