--- a/src/output.css
+++ b/src/output.css
@@ -596,10 +596,6 @@ video {
   visibility: hidden;
 }
 
-.collapse {
-  visibility: collapse;
-}
-
 .fixed {
   position: fixed;
 }
@@ -624,6 +620,10 @@ video {
   bottom: -10%;
 }
 
+.bottom-\[-20\%\] {
+  bottom: -20%;
+}
+
 .left-\[65\%\] {
   left: 65%;
 }
@@ -636,24 +636,12 @@ video {
   top: 0px;
 }
 
-.top-\[10\%\] {
-  top: 10%;
-}
-
 .top-\[5\%\] {
   top: 5%;
 }
 
 .top-\[70px\] {
   top: 70px;
-}
-
-.bottom-\[10\%\] {
-  bottom: 10%;
-}
-
-.bottom-\[-20\%\] {
-  bottom: -20%;
 }
 
 .z-0 {
@@ -681,11 +669,6 @@ video {
   margin-bottom: -2.5rem;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -706,6 +689,10 @@ video {
   margin-bottom: auto;
 }
 
+.-mt-48 {
+  margin-top: -12rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -724,22 +711,6 @@ video {
 
 .mt-\[97px\] {
   margin-top: 97px;
-}
-
-.-mt-32 {
-  margin-top: -8rem;
-}
-
-.-mt-40 {
-  margin-top: -10rem;
-}
-
-.-mt-48 {
-  margin-top: -12rem;
-}
-
-.me-40 {
-  margin-inline-end: 10rem;
 }
 
 .flex {
@@ -782,8 +753,8 @@ video {
   height: 0.25rem;
 }
 
-.h-80 {
-  height: 20rem;
+.h-44 {
+  height: 11rem;
 }
 
 .h-\[120px\] {
@@ -831,26 +802,6 @@ video {
   height: 100vh;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-44 {
-  height: 11rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -882,22 +833,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
-}
-
-.w-3\/12 {
-  width: 25%;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 .flex-1 {
@@ -999,8 +934,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-12 {
+  gap: 3rem;
 }
 
 .gap-2 {
@@ -1033,26 +976,6 @@ video {
 
 .gap-\[10px\] {
   gap: 10px;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-12 {
-  gap: 3rem;
-}
-
-.gap-96 {
-  gap: 24rem;
-}
-
-.gap-40 {
-  gap: 10rem;
-}
-
-.gap-52 {
-  gap: 13rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1099,28 +1022,8 @@ video {
   border-radius: 9999px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
 }
 
 .rounded-t-\[32px\] {
@@ -1190,11 +1093,6 @@ video {
   background-color: rgb(237 248 249 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .bg-teal-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(19 78 74 / var(--tw-bg-opacity));
@@ -1213,11 +1111,6 @@ video {
 .bg-yellowLah {
   --tw-bg-opacity: 1;
   background-color: rgb(246 201 86 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -1252,6 +1145,34 @@ video {
   background-image: url('/public/img/paw-pattern-light.png');
 }
 
+.bg-\[url\(\'public\/img\/hero-adoption\.jpg\'\)\] {
+  background-image: url('public/img/hero-adoption.jpg');
+}
+
+.bg-\[url\(\'public\/img\/paw-pattern-dark\.png\'\)\] {
+  background-image: url('public/img/paw-pattern-dark.png');
+}
+
+.bg-\[url\(\'public\/img\/paw-pattern-light\.png\'\)\] {
+  background-image: url('public/img/paw-pattern-light.png');
+}
+
+.bg-\[url\(\'public\/img\/hero-daycare\.jpg\'\)\] {
+  background-image: url('public/img/hero-daycare.jpg');
+}
+
+.bg-\[url\(\'public\/img\/hero-clinic\.jpg\'\)\] {
+  background-image: url('public/img/hero-clinic.jpg');
+}
+
+.bg-\[url\(\'public\/img\/hero-tentang-kami\.jpg\'\)\] {
+  background-image: url('public/img/hero-tentang-kami.jpg');
+}
+
+.bg-\[url\(\'public\/img\/big-cat-img\.jpg\'\)\] {
+  background-image: url('public/img/big-cat-img.jpg');
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1263,11 +1184,6 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 
 .object-center {
@@ -1299,8 +1215,9 @@ video {
   padding: 2rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .px-10 {
@@ -1353,26 +1270,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.px-40 {
-  padding-left: 10rem;
-  padding-right: 10rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.py-96 {
-  padding-top: 24rem;
-  padding-bottom: 24rem;
-}
-
 .py-40 {
   padding-top: 10rem;
   padding-bottom: 10rem;
@@ -1396,6 +1293,10 @@ video {
 
 .pb-52 {
   padding-bottom: 13rem;
+}
+
+.pb-7 {
+  padding-bottom: 1.75rem;
 }
 
 .pe-10 {
@@ -1426,54 +1327,6 @@ video {
   padding-top: 1.25rem;
 }
 
-.ps-40 {
-  padding-inline-start: 10rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pe-32 {
-  padding-inline-end: 8rem;
-}
-
-.pe-96 {
-  padding-inline-end: 24rem;
-}
-
-.pe-52 {
-  padding-inline-end: 13rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
-.pe-40 {
-  padding-inline-end: 10rem;
-}
-
-.pe-80 {
-  padding-inline-end: 20rem;
-}
-
-.ps-10 {
-  padding-inline-start: 2.5rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-7 {
-  padding-bottom: 1.75rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1486,14 +1339,6 @@ video {
   font-family: 'Barlow';
 }
 
-.font-\[\'\'\] {
-  font-family: '';
-}
-
-.font-\[\] {
-  font-family: ;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1502,6 +1347,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-\[14px\] {
@@ -1542,15 +1392,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-\[302px\] {
-  font-size: 302px;
-}
-
 .font-black {
   font-weight: 900;
 }
@@ -1567,20 +1408,8 @@ video {
   font-weight: 600;
 }
 
-.leading-10 {
-  line-height: 2.5rem;
-}
-
-.leading-\[\] {
-  line-height: ;
-}
-
 .leading-\[54px\] {
   line-height: 54px;
-}
-
-.leading-\[540px\] {
-  line-height: 540px;
 }
 
 .text-Fuschia {
@@ -1716,11 +1545,6 @@ video {
   }
 }
 
-.hover\:-translate-y-2:hover {
-  --tw-translate-y: -0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:bg-cyan-950:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(8 51 68 / var(--tw-bg-opacity));
@@ -1740,11 +1564,6 @@ video {
   text-decoration-line: underline;
 }
 
-.hover\:brightness-50:hover {
-  --tw-brightness: brightness(.5);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .hover\:brightness-75:hover {
   --tw-brightness: brightness(.75);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1760,12 +1579,6 @@ video {
 
 .hover\:duration-300:hover {
   transition-duration: 300ms;
-}
-
-@media not all and (min-width: 1024px) {
-  .max-lg\:hidden {
-    display: none;
-  }
 }
 
 @media not all and (min-width: 768px) {
@@ -1808,20 +1621,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:visible {
-    visibility: visible;
-  }
-
   .md\:invisible {
     visibility: hidden;
   }
 
   .md\:mt-0 {
     margin-top: 0px;
-  }
-
-  .md\:block {
-    display: block;
   }
 
   .md\:hidden {
@@ -1837,32 +1642,8 @@ video {
     height: 600px;
   }
 
-  .md\:w-11\/12 {
-    width: 91.666667%;
-  }
-
   .md\:w-56 {
     width: 14rem;
-  }
-
-  .md\:w-\[24\%\] {
-    width: 24%;
-  }
-
-  .md\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .md\:w-\[60\%\] {
-    width: 60%;
-  }
-
-  .md\:w-\[58\%\] {
-    width: 58%;
-  }
-
-  .md\:w-3\/12 {
-    width: 25%;
   }
 
   .md\:scale-100 {
@@ -1936,14 +1717,6 @@ video {
 
   .lg\:w-\[24\%\] {
     width: 24%;
-  }
-
-  .lg\:w-11\/12 {
-    width: 91.666667%;
-  }
-
-  .lg\:w-3 {
-    width: 0.75rem;
   }
 
   .lg\:scale-100 {
@@ -2026,11 +1799,6 @@ video {
 
   .xl\:flex-row {
     flex-direction: row;
-  }
-
-  .xl\:px-40 {
-    padding-left: 10rem;
-    padding-right: 10rem;
   }
 
   .xl\:px-20 {
